# LAMP

./: .gitignore  .gitlab-ci-repos.yml  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  hello.sh  lamp_analysis.xml  lamp_testing_notes.md  launch_lamp.yaml  run_blam.sh  rviz_multi_robot.rviz
artifact_msgs/: CMakeLists.txt  package.xml
artifact_msgs/msg/: Artifact.msg  PointSourceDetection.msg  ScorabilityMetrics.msg  WiFiScanRaw.msg
artifact_msgs/srv/: GetNetvladDesc.srv
factor_handlers/: CMakeLists.txt  package.xml
factor_handlers/config/: april_parameters.yaml  odom_parameters.yaml
factor_handlers/include/factor_handlers/: ArtifactHandler.h  LampDataHandlerBase.h  OdometryHandler.h  PoseGraphHandler.h
factor_handlers/src/: AprilTagHandler.cc  ArtifactHandler.cc  ManualLoopClosureHandler.cc  OdometryHandler.cc  PoseGraphHandler.cc  RobotPoseHandler.cc
factor_handlers/test/: test_april_tag_handler.cc  test_april_tag_handler.test  test_artifact_handler.cc  test_odometry_handler.test  test_stationary_handler.test
lamp/: CMakeLists.txt  package.xml
lamp/config/: lamp_init_noise.yaml  lamp_rates.yaml  lamp_settings.yaml  precision_parameters.yaml  robot_names.yaml
lamp/include/lamp/: LampBase.h  LampBaseStation.h  LampRobot.h
lamp/launch/: lamp_g2o.launch  turn_on_lamp.launch  turn_on_lamp_base.launch
lamp/rviz/: lamp_base.rviz
lamp/scripts/: fiducial_cal.py  launch_post_processing.yaml
lamp/src/: LampBase.cc  LampBaseStation.cc  LampRobot.cc  lamp_base_station_node.cc
lamp/test/: test_lamp.cc  test_lamp.test  test_lamp_base.cc
lamp_pgo/: CMakeLists.txt  package.xml
lamp_pgo/include/lamp_pgo/: LampPgo.h
lamp_pgo/kimera_rpgo/: .gitignore
lamp_pgo/kimera_rpgo/scripts/: plot_stats.ipynb
lamp_pgo/kimera_rpgo/src/: GenericSolver.cpp  RobustSolver.cpp
lamp_pgo/rviz/: lamp_g2o.rviz
lamp_pgo/src/: LampPgo.cc  lamp_g2o_node.cc  lamp_pgo.cc  load_and_save_as_g2o.cc
lamp_utils/: CMakeLists.txt  package.xml
lamp_utils/include/lamp_utils/: CommonFunctions.h  CommonStructs.h  LampPcldFilter.h  PointCloudUtils.h  PoseGraph.h  PrefixHandling.h  gicp.h  gicp_utils.h
lamp_utils/src/: CommonFunctions.cc  LampPcldFilter.cc  PointCloudUtils.cc  PoseGraphBookkeeping.cc  PoseGraphFileIO.cc  PoseGraphLookupUtils.cc  PoseGraphMessageConversion.cc  gicp.cc
lamp_utils/test/: test_artifacts.h  test_lamp_utils.cc  test_lamp_utils.test  test_point_cloud_utils.cc  test_point_cloud_utils.test  test_pose_graph.cc  test_pose_graph.test
localizer_zero_velocity_detector/: CMakeLists.txt  README.md  TODO  package.xml
localizer_zero_velocity_detector/cfg/: very_stable_config.yaml
localizer_zero_velocity_detector/launch/: very_stable_genius.launch  very_stable_genius_visualizer.launch
localizer_zero_velocity_detector/msg/: Stationary.msg
localizer_zero_velocity_detector/src/: very_stable_genius.cpp  very_stable_genius_node.cpp  very_stable_genius_visualizer.cpp
localizer_zero_velocity_detector/test/: very_stable_genius_test.cpp
loop_closure/: CMakeLists.txt  package.xml
loop_closure/config/: laser_parameters.yaml
loop_closure/launch/: eval_loop_computation_test.launch  gen_loop_computation_test.launch  loop_closure_modules.launch  run_rssi.launch
loop_closure/script/: dataset.py  gnn_model.py  offline_refit.py
loop_closure/src/: GenericLoopPrioritization.cc  IcpLoopComputation.cc  LaserLoopClosure.cc  LoopCandidateQueue.cc  LoopClosureBase.cc  LoopComputation.cc  LoopGeneration.cc  LoopPrioritization.cc  ObservabilityLoopPrioritization.cc  ObservabilityQueue.cc  ProximityLoopGeneration.cc  RoundRobinLoopCandidateQueue.cc  RssiLoopClosure.cc  TestUtils.cc  eval_loop_computation_test.cc  gen_loop_computation_test.cc  loop_candidate_queue_node.cc  loop_closure_batcher_node.py  loop_prioritization_node.cc  rssi_loop_generation_node.cc
loop_closure/test/: test_artifacts.h  test_icp_computation.cpp  test_loop_computation.cc  test_loop_generation.cc  test_loop_generation.test  test_loop_prioritization.test  test_rssi_loop_generation.cc
point_cloud_visualizer/: CMakeLists.txt  package.xml
point_cloud_visualizer/launch/: point_cloud_visualizer.launch
point_cloud_visualizer/src/: PointCloudVisualizer.cc
point_cloud_visualizer/test/: test_point_cloud_visualizer.test
pose_graph_merger/: CMakeLists.txt  package.xml
pose_graph_merger/launch/: two_pose_graph_merge.launch
pose_graph_merger/src/: TwoPoseGraphMerge.cc  merger.cc  two_pose_graph_merge_node.cc
pose_graph_merger/test/: test_pose_graph_merger.test  test_two_pose_graph_merge.test
pose_graph_msgs/: CMakeLists.txt  package.xml
pose_graph_msgs/msg/: CommNodeInfo.msg  CommNodeStatus.msg  KeyValue.msg  LoopCandidate.msg  LoopCandidateArray.msg  LoopComputationStatus.msg  MapInfo.msg  PoseAndScan.msg  PoseGraph.msg  PoseGraphEdge.msg  PoseGraphNode.msg
pose_graph_msgs/tests/: test_bridge.py  test_bridge.test
pose_graph_tools/: CMakeLists.txt  package.xml
pose_graph_visualizer/: CMakeLists.txt  package.xml
pose_graph_visualizer/src/: PoseGraphVisualizer.cc
pose_graph_visualizer/srv/: HighlightEdge.srv  HighlightNode.srv
roadmap_msgs/: CMakeLists.txt  package.xml  setup.py
roadmap_msgs/msg/: DlioMetrics.msg  MLPFeedback.msg  Roadmap.msg  RoadmapAnchor.msg  RoadmapEdge.msg  RoadmapNode.msg
roadmap_msgs/src/: roadmap_bridge.cpp  roadmap_graph.cpp
roadmap_msgs/srv/: GetRoadmap.srv  PlanPath.srv  UpdateRoadmap.srv
roadmap_msgs/tests/: demo_sub.py  test_bridge.py  test_bridge_py.test
silvus_msgs/: CMakeLists.txt  package.xml
silvus_msgs/msg/: SilvusDualEdge.msg  SilvusDualEdgeList.msg  SilvusHealth.msg  SilvusRoadmap.msg  SilvusRoute.msg  SilvusRouteList.msg  SilvusStreamscape.msg  SilvusStreamscapeNeighbor.msg  SilvusStreamscapeNode.msg  key_value_int32_int32.msg
src/lamp/: CMakeLists.txt  package.xml
src/lamp_pgo/: CMakeLists.txt  package.xml
src/loop_closure/: CMakeLists.txt  CMakelists.txt  package.xml
src/pose_graph_merger/: CMakeLists.txt  package.xml
uwb_msgs/: CMakeLists.txt  package.xml
uwb_msgs/msg/: Anchor.msg  InterVehicleRange.msg
(+583 files in other folders)
