<?xml version="1.0"?>
<package format="2">
  <name>artifact_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for artifact detection, localization, or reconciliation</description>


  <author email="benjamin.ramtoula@jpl.nasa.gov">Benjamin Ramtoula</author>
  <maintainer email="benjamin.ramtoula@jpl.nasa.gov">Benjamin Ramtoula</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>actionlib_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
