<?xml version="1.0"?>
<package>
  <name>lamp</name>
  <version>0.0.0</version>
  <description>The lamp package</description>

  <author email="benjamin.morrell@jpl.nasa.gov">Benjamin Morrell</author>
  <maintainer email="benjamin.morrell@jpl.nasa.gov">Benjamin Morrell</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- TODO - remove what is not needed -->
  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>factor_handlers</build_depend>
  <build_depend>loop_closure</build_depend>
  <build_depend>point_cloud_mapper</build_depend>
  <build_depend>geometry_utils</build_depend>
  <build_depend>parameter_utils</build_depend>
  <build_depend>utils</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>core_msgs</build_depend>
  <build_depend>pose_graph_msgs</build_depend>
  <build_depend>uwb_msgs</build_depend>
  <build_depend>mesh_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>  
  <build_depend>pose_graph_merger</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>artifact_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>factor_handlers</run_depend>
  <run_depend>loop_closure</run_depend>
  <run_depend>utils</run_depend>
  <run_depend>point_cloud_mapper</run_depend>
  <run_depend>geometry_utils</run_depend>
  <run_depend>parameter_utils</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>core_msgs</run_depend>
  <run_depend>pose_graph_msgs</run_depend>
  <run_depend>uwb_msgs</run_depend>
  <run_depend>mesh_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pose_graph_merger</run_depend>
  <run_depend>pose_graph_visualizer</run_depend>
  <run_depend>point_cloud_visualizer</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>lamp_pgo</run_depend>
  <run_depend>artifact_msgs</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>  
</package>
