<?xml version="1.0"?>
<package format="2">
  <name>lamp_utils</name>
  <version>0.0.10</version>
  <description>lamp_utils</description>

  <author email="yunchang@mit.edu">Yun Chang</author>
  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gtsam</depend>
  <depend>geometry_utils</depend>
  <depend>pose_graph_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
