<?xml version="1.0"?>
<package>
  <name>loop_closure</name>
  <version>0.0.0</version>
  <description>The loop_closure package</description>

  <author email="yunchang@mit.edu">Yun Chang</author>
  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>utils</build_depend>
  <build_depend>geometry_utils</build_depend>
  <build_depend>parameter_utils</build_depend>
  <build_depend>point_cloud_mapper</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>core_msgs</build_depend>
  <build_depend>pose_graph_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>silvus_msgs</build_depend>
  <build_depend>multithreaded_gicp</build_depend>
  <build_depend>teaserpp</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>utils</run_depend>
  <run_depend>geometry_utils</run_depend>
  <run_depend>parameter_utils</run_depend>
  <run_depend>point_cloud_mapper</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>core_msgs</run_depend>
  <run_depend>pose_graph_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>silvus_msgs</run_depend>
  <run_depend>multithreaded_gicp</run_depend>
  <run_depend>teaserpp</run_depend>


  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>  
</package>
