<?xml version="1.0"?>
<package>
  <name>pose_graph_merger</name>
  <version>0.0.0</version>
  <description>The pose_graph_merger package</description>

  <maintainer email="costar@todo.todo">Tristan Heywood</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pose_graph_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_utils</build_depend>
  <build_depend>lamp_utils</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pose_graph_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_utils</run_depend>
  <run_depend>lamp_utils</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

</package>
