<?xml version="1.0"?>
<package format="2">
  <name>roadmap_msgs</name>
  <version>0.0.0</version>
  <description>The roadmap_msgs package</description>

  <maintainer email="otsu@jpl.nasa.gov">Kyon Otsu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
